--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "nodemon": "^1.17.2"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "mkdir -p public && cp index.html script.js public"
   },
   "author": "Lambda School",
   "license": "ISC"
